DDP-4898: [TestBoston] Help page (#254)
* Add help page

* Add background

* Mark translations

* last line

* Fix

* Update pdf

* Template updated

* Update translate

* Fix header/footer buttons

* Add content

* Improve activity styling

* Optimize images

* Fixes

* Change order

* Update cube

* Fix

* Add lazy loading

* Close menu

* Revert

* fix

* PR feedback

* PR feedback

--- a/ddp-workspace/projects/ddp-testboston/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/footer/footer.component.html
@@ -51,8 +51,9 @@
                             routerLinkActive="footer-link_active" translate>Navigation.Invitation</a>
                     </li>
                     <li>
-                        <a class="Link Link_no-wrap footer-link" href="kit-instructions.pdf" target="_blank" translate>
-                            Navigation.KitInstructions
+                        <a class="Link footer-link" [routerLink]="'/' + appRoutes.UPS"
+                            routerLinkActive="footer-link_active" translate>
+                            Navigation.Help
                         </a>
                     </li>
                 </ul>
