--- a/ddp-workspace/projects/ddp-prion/src/styles.scss
+++ b/ddp-workspace/projects/ddp-prion/src/styles.scss
@@ -4,10 +4,12 @@ $warning-height: 150px;
 html,
 body {
     margin: 0;
-    padding: 0;
+    padding-left: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-right: 0 !important;
     height: 100%;
     font-size: 15px !important;
-    padding-right: 0 !important;
     background-color: #F9F3E8;
 }
 
@@ -1671,8 +1673,8 @@ ul {
 }
 
 .ErrorMessage {
-    margin-top: 0px;
-    padding-top: 0px;
+    margin-top: 0;
+    padding-top: 0;
     font-size: 0.7rem;
     color: #F44336;
     font-weight: 400;
@@ -2030,7 +2032,7 @@ select:-webkit-autofill {
 }
 
 .list--sublist li {
-  padding-top: 0px;
+  padding-top: 0;
 }
 
 .mat-form-field-underline {
@@ -2054,7 +2056,7 @@ mat-form-field.mat-form-field-type-mat-input.mat-focused input {
 
 .ddp-agreement-text {
     white-space: normal;
-    margin: 0px;
+    margin: 0;
     font-size: 1rem;
     font-weight: 300;
     color: mat-color($app-theme, 800);
@@ -2361,7 +2363,7 @@ ddp-activity-composite-answer .ddp-answer-container {
     box-shadow: 0 2px 2px rgba(0, 0, 0, .24), 0 0 2px rgba(0, 0, 0, .12);
     margin: 4px;
     background-color: mat-color($app-theme, 100);
-    padding: 0px 0px 0px 0px !important;
+    padding: 0 0 0 0 !important;
 }
 
 .mat-checkbox-label {
@@ -2464,7 +2466,7 @@ label.mat-form-field-label {
 }
 
 .mat-list-item-content {
-    padding: 0px 4px !important;
+    padding: 0 4px !important;
 }
 
 .mat-checkbox-layout .mat-checkbox-label {
