Fix data cursor

--- a/ddp-workspace/projects/ddp-brain-v2/src/app/components/data/data.component.html
+++ b/ddp-workspace/projects/ddp-brain-v2/src/app/components/data/data.component.html
@@ -18,8 +18,9 @@
             <h2 translate>DataPage.Snapshots.Title</h2>
             <div class="diagrams" (click)="modalImage.openModal($event)">
                 <ng-container *ngFor="let diagram of 'DataPage.Snapshots.Diagrams' | translate">
-                    <div class="diagram diagram_modal">
-                        <img lazy-resource class="diagram__image" [src]="diagram.Image" [alt]="diagram.Alt">
+                    <div class="diagram">
+                        <img lazy-resource class="diagram__image diagram__image_modal" [src]="diagram.Image"
+                            [alt]="diagram.Alt">
                         <p class="diagram__link">
                             <a class="Link" href="#" target="_blank">{{diagram.Link}}</a>
                         </p>
