--- a/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/welcome/welcome.component.scss
@@ -112,7 +112,7 @@
     @include reset-list;
 }
 
-.member {
+.pi {
     margin: 3.5rem 0;
 
     &__title {
@@ -132,6 +132,28 @@
     &__info {
         color: mat-color($app-theme, 700);
         font-size: 1.25rem;
+        @include member;
+    }
+}
+
+.others {
+    &__title {
+        color: mat-color($app-theme, 1200);
+        font-size: 1.625rem;
+        font-weight: 600;
+        @include member;
+    }
+
+    &__item {
+        &:last-child {
+            margin-bottom: 3.5rem;
+        }
+    }
+
+    &__name {
+        color: mat-color($app-theme, 700);
+        font-size: 1.375rem;
+        font-weight: 600;
         @include member;
     }
 }
