rarex | add password page

--- a/ddp-workspace/projects/ddp-rarex/src/app-theme.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app-theme.scss
@@ -4,23 +4,23 @@
 @include mat-core();
 
 $mat-primary: (
-  50: #ffffff,
-  100: $color-secondary-teal,
-  200: #ffffff,
-  250: #ffffff,
-  300: $color-secondary-blue,
-  350: #ffffff,
-  400: #ffffff,
-  450: #ffffff,
-  500: $color-primary,
-  550: #ffffff,
-  600: #ffffff,
-  650: #ffffff,
-  700: $color-tertiary-red,
-  750: #ffffff,
-  800: #ffffff,
-  850: #ffffff,
-  900: $color-tertiary-orange,
+  50: transparent,
+  100: #FFFFFF,
+  200: $color-text,
+  250: $color-secondary-blue,
+  300: $color-primary,
+  350: $color-secondary-teal,
+  400: $color-tertiary-orange,
+  450: #FFFFFF,
+  500: $color-tertiary-red,
+  550: #FFFFFF,
+  600: #FFFFFF,
+  650: #BBBBBE,
+  700: #59585F,
+  750: #ACABB0,
+  800: #E7E6E9,
+  850: #F4F4F4,
+  900: #F5F5F5,
   contrast: (
     50: #000000,
     100: #000000,
