--- a/ddp-workspace/projects/ddp-rarex/src/styles/_common.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_common.scss
@@ -2,5 +2,33 @@
   max-width: 1200px;
 
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 0;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100%;
+}
+
+.section {
+  width: 100%;
+}
+
+.content {
+  margin: 0 auto;
+  padding: 0 1.5625rem;
+}
+
+.content_wide {
+  max-width: 1200px;
+}
+
+.content_medium {
+  max-width: 1000px;
+}
+
+.content_tight {
+  max-width: 700px;
 }
