rarex | add header and prequal activity page

--- a/ddp-workspace/projects/ddp-rarex/src/styles.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles.scss
@@ -7,5 +7,6 @@
 @import './styles/static-page.scss';
 @import './styles/password.scss';
 @import './styles/buttons.scss';
+@import './styles/activity.scss';
 
 @include mat-core($app-typography);
