--- a/ddp-workspace/projects/ddp-rarex/src/styles/_common.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_common.scss
@@ -1,8 +1,12 @@
 .container {
   max-width: 1200px;
-
+  height: 100vh;
   margin: 0 auto;
   padding: 0;
+  margin-bottom: -20rem;
+  padding-bottom: 20rem;
+  padding-top: 6.25rem;
+  box-sizing: border-box;
 }
 
 .main {
