--- a/ddp-workspace/projects/ddp-rarex/src/styles.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles.scss
@@ -8,5 +8,6 @@
 @import './styles/password.scss';
 @import './styles/buttons.scss';
 @import './styles/activity.scss';
+@import './styles/dashboard.scss';
 
 @include mat-core($app-typography);
