DDP-4907: BrainCancerProject pediatric Age up stuff (#260)
* Add age up stuff

* Fix guids

--- a/ddp-workspace/projects/ddp-brain-v2/src/app-theme.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/app-theme.scss
@@ -18,6 +18,7 @@ $md-primary: (
     800: #E1E4EB,
     900: #EBEBEB,
     1000: #D4D9DC,
+    1100: #F4F4F4,
     contrast: (
         50: #000000,
         100: #000000,
@@ -34,7 +35,8 @@ $md-primary: (
         700: #000000,
         800: #000000,
         900: #000000,
-        1000: #000000
+        1000: #000000,
+        1100: #000000
     )
 );
 
