--- a/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles.scss
@@ -47,6 +47,12 @@ body {
     flex-direction: column;
     align-items: center;
     min-height: 100%;
+
+    &_activity {
+        padding-bottom: 6.25rem;
+        padding-top: 1rem;
+        box-sizing: border-box;
+    }
 }
 
 .section {
