--- a/ddp-workspace/projects/ddp-rarex/src/app/components/app/app.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <app-header></app-header>
+<app-header></app-header>
+<div class="app-main-container">
   <router-outlet></router-outlet>
-  <app-footer></app-footer>
 </div>
+<app-footer></app-footer>
