--- a/ddp-workspace/projects/ddp-rarex/src/styles/_activity.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_activity.scss
@@ -14,8 +14,6 @@
 }
 
 .main_activity {
-    padding-bottom: 6.25rem;
-    padding-top: 1rem;
     box-sizing: border-box;
 }
 
@@ -170,7 +168,7 @@
 .activity-buttons {
     display: flex;
     justify-content: space-between;
-    margin: 4rem 0 0 0;
+    margin: 2rem 0 0 0;
 }
 
 .button_right {
@@ -394,4 +392,16 @@ ddp-activity-composite-answer {
 // mat error
 .mat-error {
     font-size: 0.9rem;
+}
+
+.activity {
+  &__btn-section {
+    display: flex;
+
+    margin-top: 1rem;
+
+    &__right {
+      margin-left: auto;
+    }
+  }
 }
