--- a/ddp-workspace/projects/ddp-rarex/src/styles/_reset.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_reset.scss
@@ -8,10 +8,5 @@
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
-}
-
-body {
-  height: 100vh;
-  overflow-y: auto;
+  box-sizing: border-box;
 }
