--- a/ddp-workspace/projects/ddp-brain-v2/src/app-theme.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/app-theme.scss
@@ -19,6 +19,8 @@ $md-primary: (
     900: #EBEBEB,
     1000: #D4D9DC,
     1100: #F4F4F4,
+    1200: #F57437,
+    1300: #59585F,
     contrast: (
         50: #000000,
         100: #000000,
@@ -36,7 +38,9 @@ $md-primary: (
         800: #000000,
         900: #000000,
         1000: #000000,
-        1100: #000000
+        1100: #000000,
+        1200: #000000,
+        1300: #000000
     )
 );
 
