Change header styles

--- a/ddp-workspace/projects/ddp-rarex/src/app-theme.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app-theme.scss
@@ -5,7 +5,7 @@
 
 $mat-primary: (
   50: transparent,
-  100: #FFFFFF,
+  100: $color-background,
   200: $color-text,
   250: $color-secondary-blue,
   300: $color-primary,
