--- a/ddp-workspace/projects/ddp-rarex/src/styles/_variables.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_variables.scss
@@ -7,6 +7,6 @@ $color-tertiary-red: #f04b57;
 $color-tertiary-orange: #ffc94e;
 
 $color-text: #414042;
-$color-background: #ffffff;
+$color-background: #f4efea;
 
 $app-typography: mat-typography-config($font-family: 'Roboto');
