--- a/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.scss
@@ -1,305 +1,390 @@
 @import '../../../app-theme.scss';
 
-.header {
+.main-header {
+  display: flex;
+  align-items: center;
+
+  height: 8rem;
+
+  padding: 0.5rem 1rem;
+
   background-color: mat-color($app-theme, 100);
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1;
-  height: 6.25rem;
-  transition: all 200ms linear;
+
+  &__logo {
+    height: 7rem;
+  }
+
+  &__nav {
+    margin-left: auto;
+  }
+
+  &__powered-by {
+    margin-left: auto;
+  }
 }
 
-.header_shadow {
-  box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.2);
-}
-
-.placeholder {
-  height: 0;
-  transition: all 200ms linear;
-}
-
-.placeholder_opened {
-  height: 100vh;
-}
-
-.panel-opened {
-  height: 100vh;
-  z-index: 3;
-
-  .panel-controls {
-    display: flex;
-    flex-direction: column;
-    margin: 1.5625rem 2.5rem;
-    transition: opacity 100ms 200ms ease;
-    opacity: 1;
-    visibility: visible;
+.logo {
+  &__img {
+    display: block;
     height: 100%;
-
-    .nav,
-    .auth {
-      display: flex;
-    }
-
-    .navigation {
-      flex-direction: column;
-      padding: 0;
-    }
-
-    .auth {
-      flex-direction: column;
-      align-items: start;
-    }
-
-    .simple-button,
-    .SimpleButton,
-    .auth__login,
-    a {
-      font-size: 1.875rem;
-      line-height: 2.25rem;
-    }
-
-    .navigation__item,
-    .auth__login,
-    .auth__dashboard {
-      margin-bottom: 3rem;
-    }
-
-    .dashboard-icon {
-      width: 28px;
-      height: 28px;
-    }
   }
 }
 
-.header-content {
+.nav-list {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  min-height: 6.25rem;
-  max-width: 1200px;
-  margin: auto;
-  padding: 0.5rem 1.5rem;
-}
 
-.panel-controls {
-  opacity: 0;
-  visibility: hidden;
-  height: 0;
-}
-
-.navigation {
   list-style: none;
-  display: flex;
-}
 
-.navigation__item {
-  margin-right: 2.8125rem;
-  display: flex;
-}
-
-.auth {
-  display: flex;
-  align-items: center;
-}
-
-.auth__login {
-  font-size: 1.0625rem;
-  line-height: 1.375rem;
-  cursor: pointer;
-}
-
-.header-button {
-  margin-left: 1.875rem;
-}
-
-.project-logo {
-  display: flex;
-  align-items: center;
-  text-decoration: none !important;
-}
-
-.project-logo:hover {
-  text-decoration: none;
-  color: mat-color($app-theme, 200);
-}
-
-.project-logo__img {
-  margin-right: 0.9375rem;
-  height: 3.25rem;
-}
-
-.activity-heading {
-  width: 700px;
-  margin: 0 1.5rem;
-}
-
-.sticky {
-  display: none;
-}
-
-.hamburger {
-  padding: 2rem;
-  cursor: pointer;
-  transition-property: opacity, filter;
-  transition-duration: 0.15s;
-  transition-timing-function: linear;
-  background-color: transparent;
-  border: 0;
-  display: none;
-}
-
-.hamburger-box {
-  width: 1.875rem;
-  height: 1.25rem;
-  display: inline-block;
-  position: relative;
-}
-
-.hamburger-inner {
-  display: block;
-  top: 50%;
-  margin-top: -2px;
-}
-
-.hamburger-inner,
-.hamburger-inner::before,
-.hamburger-inner::after {
-  width: 1.875rem;
-  height: 2px;
-  background-color: mat-color($app-theme, 200);
-  border-radius: 2px;
-  position: absolute;
-  transition-property: transform;
-  transition-duration: 0.15s;
-  transition-timing-function: ease;
-}
-
-.hamburger-inner::before,
-.hamburger-inner::after {
-  content: "";
-  display: block;
-}
-
-.hamburger--slider .hamburger-inner {
-  top: 2px;
-}
-
-.hamburger--slider .hamburger-inner::before {
-  top: 8px;
-  transition-property: transform, opacity;
-  transition-timing-function: ease;
-  transition-duration: 0.15s;
-}
-
-.hamburger--slider .hamburger-inner::after {
-  top: 16px;
-}
-
-.hamburger--slider.is-active .hamburger-inner {
-  transform: translate3d(0, 8px, 0) rotate(45deg);
-}
-
-.hamburger--slider.is-active .hamburger-inner::before {
-  transform: rotate(-45deg) translate3d(0, -6px, 0);
-  opacity: 0;
-}
-
-.hamburger--slider.is-active .hamburger-inner::after {
-  transform: translate3d(0, -16px, 0) rotate(-90deg);
-}
-
-.header-link__dashboard,
-.header-link {
-  display: flex;
-  align-items: center;
-}
-
-.header-link:link,
-.header-link:visited {
-  color: mat-color($app-theme, 200);
-  font-size: 1.0625rem;
-  line-height: 1.375rem;
-
-  .dashboard-icon_color {
-    stroke: mat-color($app-theme, 200);
-  }
-}
-
-.header-link:hover {
-  color: mat-color($app-theme, 650);
-  text-decoration: underline;
-
-  .dashboard-icon_color {
-    stroke: mat-color($app-theme, 650);
-  }
-}
-
-.header-link:active {
-  color: mat-color($app-theme, 200);
-  text-decoration: underline;
-
-  .dashboard-icon_color {
-    stroke: mat-color($app-theme, 200);
-  }
-}
-
-.header-link__dashboard {
-  margin: 0 0.2rem 0 0;
-}
-
-.header-link_active {
-  text-decoration: underline;
-}
-
-@media screen and (max-width: 945px) {
-  .hamburger {
-    display: flex;
-  }
-
-  .header-button {
-    margin: 0;
-  }
-
-  .nav,
-  .auth {
-    display: none;
-  }
-}
-
-@media only screen and (max-width: 850px) {
-  .breadcrumbs {
-    display: none;
-  }
-
-  .sticky {
-    display: unset;
-  }
-}
-
-@media only screen and (max-width: 650px) {
-  .activity-heading {
-    margin: 0 1rem;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  .header-content {
-    padding: 0px 5px;
-  }
-}
-
-.header-content_sticky {
-  @media only screen and (max-width: 450px) {
-    .project-logo__img {
-      margin-right: 0.5rem;
+  &__item {
+    &:not(:last-child) {
+      margin-right: 2.8125rem;
     }
   }
 
-  @media only screen and (max-width: 350px) {
-    .project-logo {
-      display: none;
+  &__link {
+    text-decoration: none;
+    font-size: 1.0625rem;
+    line-height: 1.375rem;
+    font-family: inherit;
+    white-space: nowrap;
+    color: mat-color($app-theme, 200);
+
+    cursor: pointer;
+
+    &:hover {
+      color: mat-color($app-theme, 650);
+      text-decoration: underline;
+    }
+
+    &:focus {
+      text-decoration: underline;
+    }
+
+    &--dashboard {
+      display: flex;
+      align-items: center;
+
+      span { margin-left: 0.35rem; }
+    }
+
+    &--active {
+      font-weight: bold;
+      text-decoration: underline;
     }
   }
 }
+
+.powered-by {
+  display: flex;
+  align-items: flex-end;
+  align-self: flex-end;
+
+  &__text {
+    margin-right: 0.5rem;
+  }
+}
+
+//.header {
+//  background-color: mat-color($app-theme, 100);
+//  position: fixed;
+//  top: 0;
+//  left: 0;
+//  width: 100%;
+//  z-index: 1;
+//  height: 6.25rem;
+//  transition: all 200ms linear;
+//}
+//
+//.header_shadow {
+//  box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.2);
+//}
+//
+//.placeholder {
+//  height: 0;
+//  transition: all 200ms linear;
+//}
+//
+//.placeholder_opened {
+//  height: 100vh;
+//}
+//
+//.panel-opened {
+//  height: 100vh;
+//  z-index: 3;
+//
+//  .panel-controls {
+//    display: flex;
+//    flex-direction: column;
+//    margin: 1.5625rem 2.5rem;
+//    transition: opacity 100ms 200ms ease;
+//    opacity: 1;
+//    visibility: visible;
+//    height: 100%;
+//
+//    .nav,
+//    .auth {
+//      display: flex;
+//    }
+//
+//    .navigation {
+//      flex-direction: column;
+//      padding: 0;
+//    }
+//
+//    .auth {
+//      flex-direction: column;
+//      align-items: start;
+//    }
+//
+//    .simple-button,
+//    .SimpleButton,
+//    .auth__login,
+//    a {
+//      font-size: 1.875rem;
+//      line-height: 2.25rem;
+//    }
+//
+//    .navigation__item,
+//    .auth__login,
+//    .auth__dashboard {
+//      margin-bottom: 3rem;
+//    }
+//
+//    .dashboard-icon {
+//      width: 28px;
+//      height: 28px;
+//    }
+//  }
+//}
+//
+//.header-content {
+//  display: flex;
+//  justify-content: space-between;
+//  align-items: center;
+//  min-height: 6.25rem;
+//  max-width: 1200px;
+//  margin: auto;
+//  padding: 0.5rem 1.5rem;
+//}
+//
+//.panel-controls {
+//  opacity: 0;
+//  visibility: hidden;
+//  height: 0;
+//}
+//
+//.navigation {
+//  list-style: none;
+//  display: flex;
+//}
+//
+//.navigation__item {
+//  margin-right: 2.8125rem;
+//  display: flex;
+//}
+//
+//.auth {
+//  display: flex;
+//  align-items: center;
+//}
+//
+//.auth__login {
+//  font-size: 1.0625rem;
+//  line-height: 1.375rem;
+//  cursor: pointer;
+//}
+//
+//.header-button {
+//  margin-left: 1.875rem;
+//}
+//
+//.project-logo {
+//  display: flex;
+//  align-items: center;
+//  text-decoration: none !important;
+//}
+//
+//.project-logo:hover {
+//  text-decoration: none;
+//  color: mat-color($app-theme, 200);
+//}
+//
+//.project-logo__img {
+//  margin-right: 0.9375rem;
+//  height: 3.25rem;
+//}
+//
+//.activity-heading {
+//  width: 700px;
+//  margin: 0 1.5rem;
+//}
+//
+//.sticky {
+//  display: none;
+//}
+//
+//.hamburger {
+//  padding: 2rem;
+//  cursor: pointer;
+//  transition-property: opacity, filter;
+//  transition-duration: 0.15s;
+//  transition-timing-function: linear;
+//  background-color: transparent;
+//  border: 0;
+//  display: none;
+//}
+//
+//.hamburger-box {
+//  width: 1.875rem;
+//  height: 1.25rem;
+//  display: inline-block;
+//  position: relative;
+//}
+//
+//.hamburger-inner {
+//  display: block;
+//  top: 50%;
+//  margin-top: -2px;
+//}
+//
+//.hamburger-inner,
+//.hamburger-inner::before,
+//.hamburger-inner::after {
+//  width: 1.875rem;
+//  height: 2px;
+//  background-color: mat-color($app-theme, 200);
+//  border-radius: 2px;
+//  position: absolute;
+//  transition-property: transform;
+//  transition-duration: 0.15s;
+//  transition-timing-function: ease;
+//}
+//
+//.hamburger-inner::before,
+//.hamburger-inner::after {
+//  content: "";
+//  display: block;
+//}
+//
+//.hamburger--slider .hamburger-inner {
+//  top: 2px;
+//}
+//
+//.hamburger--slider .hamburger-inner::before {
+//  top: 8px;
+//  transition-property: transform, opacity;
+//  transition-timing-function: ease;
+//  transition-duration: 0.15s;
+//}
+//
+//.hamburger--slider .hamburger-inner::after {
+//  top: 16px;
+//}
+//
+//.hamburger--slider.is-active .hamburger-inner {
+//  transform: translate3d(0, 8px, 0) rotate(45deg);
+//}
+//
+//.hamburger--slider.is-active .hamburger-inner::before {
+//  transform: rotate(-45deg) translate3d(0, -6px, 0);
+//  opacity: 0;
+//}
+//
+//.hamburger--slider.is-active .hamburger-inner::after {
+//  transform: translate3d(0, -16px, 0) rotate(-90deg);
+//}
+//
+//.header-link__dashboard,
+//.header-link {
+//  display: flex;
+//  align-items: center;
+//}
+//
+//.header-link:link,
+//.header-link:visited {
+//  color: mat-color($app-theme, 200);
+//  font-size: 1.0625rem;
+//  line-height: 1.375rem;
+//
+//  .dashboard-icon_color {
+//    stroke: mat-color($app-theme, 200);
+//  }
+//}
+//
+//.header-link:hover {
+//  color: mat-color($app-theme, 650);
+//  text-decoration: underline;
+//
+//  .dashboard-icon_color {
+//    stroke: mat-color($app-theme, 650);
+//  }
+//}
+//
+//.header-link:active {
+//  color: mat-color($app-theme, 200);
+//  text-decoration: underline;
+//
+//  .dashboard-icon_color {
+//    stroke: mat-color($app-theme, 200);
+//  }
+//}
+//
+//.header-link__dashboard {
+//  margin: 0 0.2rem 0 0;
+//}
+//
+//.header-link_active {
+//  text-decoration: underline;
+//}
+//
+//@media screen and (max-width: 945px) {
+//  .hamburger {
+//    display: flex;
+//  }
+//
+//  .header-button {
+//    margin: 0;
+//  }
+//
+//  .nav,
+//  .auth {
+//    display: none;
+//  }
+//}
+//
+//@media only screen and (max-width: 850px) {
+//  .breadcrumbs {
+//    display: none;
+//  }
+//
+//  .sticky {
+//    display: unset;
+//  }
+//}
+//
+//@media only screen and (max-width: 650px) {
+//  .activity-heading {
+//    margin: 0 1rem;
+//  }
+//}
+//
+//@media only screen and (max-width: 480px) {
+//  .header-content {
+//    padding: 0px 5px;
+//  }
+//}
+//
+//.header-content_sticky {
+//  @media only screen and (max-width: 450px) {
+//    .project-logo__img {
+//      margin-right: 0.5rem;
+//    }
+//  }
+//
+//  @media only screen and (max-width: 350px) {
+//    .project-logo {
+//      display: none;
+//    }
+//  }
+//}
