--- a/ddp-workspace/projects/ddp-rarex/src/styles/_base.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_base.scss
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  background-color: $color-background;
+  background-color: #ffffff;
 
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
