--- a/ddp-workspace/projects/ddp-rarex/src/app/components/share-my-data/share-my-data.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/share-my-data/share-my-data.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="share-my-data">
   <app-rarex-activity
     [studyGuid]="studyGuid"
     [activityGuid]="activityGuid"
