Add button styles & minor changes

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/app/app.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="app-main-container">
+<div class="app-container">
   <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
