--- a/ddp-workspace/projects/ddp-rarex/src/app/components/share-my-data/share-my-data.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/share-my-data/share-my-data.component.scss
@@ -1,9 +1,3 @@
-:host {
-  display: flex;
-  justify-content: center;
-}
-
 .share-my-data {
-  flex: 1;
-  max-width: 42rem;
+  padding: 2.4rem 0;
 }
