--- a/ddp-workspace/projects/ddp-rarex/src/app/components/app/app.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/app/app.component.scss
@@ -1,3 +1,10 @@
-.app-main-container {
-  min-height: calc(100vh - 8rem - 3.5rem);
+:host {
+  display: flex;
+  flex-direction: column;
+
+  min-height: 100vh;
+}
+
+.app-container {
+  flex: 1;
 }
