--- a/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.scss
@@ -1,24 +1,20 @@
 @import '../../../app-theme.scss';
 
 .main-header {
-  display: flex;
-  align-items: center;
-
-  height: 8rem;
-
-  padding: 0.5rem 1rem;
-
   background-color: mat-color($app-theme, 100);
+
+  &__container {
+    display: flex;
+    align-items: center;
+
+    padding: 1.2rem 2.4rem;
+  }
 
   &__logo {
     height: 7rem;
   }
 
   &__nav {
-    margin-left: auto;
-  }
-
-  &__powered-by {
     margin-left: auto;
   }
 }
@@ -72,19 +68,5 @@
       font-weight: bold;
       text-decoration: underline;
     }
-  }
-}
-
-.powered-by {
-  display: flex;
-  align-items: flex-end;
-  align-self: flex-end;
-
-  &__text {
-    margin-right: 0.5rem;
-  }
-
-  &__img {
-    height: 3rem;
   }
 }
