--- a/ddp-workspace/projects/ddp-rarex/src/app/components/share-my-data/share-my-data.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/share-my-data/share-my-data.component.html
@@ -1,7 +1,9 @@
 <div class="share-my-data">
-  <app-rarex-activity
-    [studyGuid]="studyGuid"
-    [activityGuid]="activityGuid"
-    (submit)="onSubmit($event)"
-  ></app-rarex-activity>
+  <div class="container">
+    <app-rarex-activity
+      [studyGuid]="studyGuid"
+      [activityGuid]="activityGuid"
+      (submit)="onSubmit($event)"
+    ></app-rarex-activity>
+  </div>
 </div>
