Adjust dashboard buttons styles & header links

--- a/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/header/header.component.scss
@@ -51,6 +51,10 @@
     &:hover {
       color: mat-color($app-theme, 650);
       text-decoration: underline;
+
+      svg g g {
+        stroke: mat-color($app-theme, 650);
+      }
     }
 
     &:focus {
