Adjust styles & add dashboard url

--- a/ddp-workspace/projects/ddp-rarex/src/styles/_dashboard.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_dashboard.scss
@@ -3,6 +3,10 @@
 .dashboard-title-section {
   padding: 2rem 0;
   background-color: mat-color($app-theme, 350);
+
+  &__title {
+    color: white;
+  }
 }
 
 .dashboard-section {
