--- a/ddp-workspace/projects/ddp-rarex/src/styles/_activity.scss
+++ b/ddp-workspace/projects/ddp-rarex/src/styles/_activity.scss
@@ -165,8 +165,7 @@
 .infobox {
     border: 2px solid mat-color($app-theme, 250);
     border-radius: 8px;
-    background-color: rgba(113, 84, 255, 0.06);
-    padding: 1rem;
+    padding: 0 1.6rem;
 }
 
 .ddp-required-question-prompt:after {
