--- a/ddp-workspace/projects/ddp-brain-v2/src/styles/activities.scss
+++ b/ddp-workspace/projects/ddp-brain-v2/src/styles/activities.scss
@@ -16,3 +16,192 @@
 .ddp-required-question-prompt:after {
     content: ' *';
 }
+
+// buttons layout
+.activity-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin: 4rem 0 0 0;
+}
+
+.button_right {
+    margin-left: auto;
+}
+
+// question text
+.ddp-question-prompt {
+    font-family: 'Source Serif Pro', serif;
+    font-size: 1.5rem;
+    line-height: 2.875rem;
+    margin: 1.5rem 0 0.5rem 0;
+}
+
+// questions
+.ddp-activity-question {
+
+    mat-checkbox,
+    mat-radio-button {
+        color: mat-color($app-theme, 200) !important;
+    }
+
+    .mat-radio-label {
+        align-items: normal !important;
+        width: inherit !important;
+    }
+
+    .mat-list-text {
+        width: inherit !important;
+    }
+}
+
+// picklist
+.mat-checkbox-label,
+.mat-radio-label-content {
+    font-size: 1.2rem;
+    line-height: 1.2rem !important;
+    color: mat-color($app-theme, 1300);
+}
+
+.mat-checkbox-inner-container {
+    height: 1.375rem !important;
+    width: 1.375rem !important;
+}
+
+.mat-radio-label {
+    margin: 0.5rem 0;
+    align-items: unset !important;
+}
+
+.mat-radio-label-content {
+    font-family: 'Untitled-Sans-Regular', sans-serif;
+}
+
+.picklist {
+    .ddp-date-field-margin:first-child {
+        margin: 0 1.5rem 0 0;
+    }
+
+    .ddp-date-field-margin:last-child {
+        margin: 0;
+    }
+}
+
+.ddp-picklist-option-list-item {
+    height: auto !important;
+    margin-bottom: 1rem;
+}
+
+.mat-list .mat-list-item .mat-list-item-content {
+    display: block !important;
+    padding: 0 4px !important;
+}
+
+.ddp-helper {
+    margin: 0;
+    font-size: 1.125rem;
+    line-height: 1.4375rem;
+    color: mat-color($app-theme, 1300);
+    font-family: 'Untitled-Sans-Regular', sans-serif;
+}
+
+.ddp-counter-color {
+    color: mat-color($app-theme, 250);
+}
+
+// native dropdown
+select {
+    font-size: 1.2rem;
+    color: mat-color($app-theme, 1300);
+    background-color: rgba(255, 255, 255, 0.9);
+    width: 100%;
+    padding: 0;
+    margin-top: 1rem;
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, .42);
+    border-radius: 0;
+    height: 2.65rem;
+    transition: all .3s;
+    font-family: inherit;
+    cursor: pointer;
+}
+
+select:disabled {
+    color: rgba(0, 0, 0, 0.38);
+    border-bottom: 1px dashed rgba(0, 0, 0, 0.38);
+    cursor: auto;
+}
+
+// material dropdown
+.mat-select-value {
+    color: mat-color($app-theme, 700) !important;
+}
+
+// input
+.mat-form-field-infix {
+    font-size: 1.2rem;
+}
+
+// error message
+.ErrorMessage {
+    font-size: 1.2rem;
+    line-height: 1.875rem;
+    margin: 1rem 0;
+    color: mat-color($app-theme, 1200);
+    border-top: 1px solid mat-color($app-theme, 1200);
+}
+
+.ErrorMessage a {
+    text-decoration: underline !important;
+}
+
+.ddp-activity-validation {
+    .ErrorMessageList {
+        list-style-type: square;
+    }
+
+    .ErrorMessageItem {
+        font-size: 1.2rem;
+        color: mat-color($app-theme, 1200);
+        margin: .3rem 0;
+        padding: 0 0 0 0;
+    }
+}
+
+// material error message
+.mat-error {
+    font-size: 0.9rem;
+    color: mat-color($app-theme, 1200);
+}
+
+// info box
+.infobox {
+    border: 2px solid mat-color($app-theme, 250);
+    border-radius: 8px;
+    background-color: rgba(113, 84, 255, 0.06);
+    padding: 1rem;
+}
+
+// institutions
+.ddp-institutions-form {
+    margin: 2rem 0;
+}
+
+.ddp-address-embedded__title,
+.ddp-institutions-form__title {
+    font-family: 'Source Serif Pro', serif;
+    font-size: 1.5rem;
+    line-height: 2.875rem;
+    margin: 0;
+}
+
+.ddp-address-embedded__subtitle,
+.ddp-institutions-form__subtitle {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    margin: 0 0 0.5rem 0;
+    color: mat-color($app-theme, 1300);
+}
+
+.ddp-institutions-form__button {
+    padding: 1.3rem 0;
+}
